// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/text-area/TextArea should not show optional text when hideOptionalLabel is true 1`] = `
<div
  className="text-area-container"
>
  <Label
    showOptionalText={false}
    text="label"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      position="bottom-left"
      text=""
      theme="error"
    >
      <textarea
        aria-errormessage="errorMessage19"
        aria-invalid={false}
        style={
          Object {
            "resize": "none",
          }
        }
      />
    </Tooltip>
    <span
      className="accessibility-hidden"
      id="errorMessage19"
      role="alert"
    />
  </Label>
</div>
`;

exports[`components/text-area/TextArea should render text area with description 1`] = `
<div
  className="text-area-container"
>
  <Label
    showOptionalText={true}
    text="label"
  >
    <div
      className="text-area-description"
      id="description24"
    >
      some description
    </div>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      position="bottom-left"
      text=""
      theme="error"
    >
      <textarea
        aria-describedby="description24"
        aria-errormessage="errorMessage23"
        aria-invalid={false}
        style={
          Object {
            "resize": "none",
          }
        }
      />
    </Tooltip>
    <span
      className="accessibility-hidden"
      id="errorMessage23"
      role="alert"
    />
  </Label>
</div>
`;

exports[`components/text-area/TextArea should show optional text when hideOptionalLabel is false 1`] = `
<div
  className="text-area-container"
>
  <Label
    showOptionalText={true}
    text="label"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      position="bottom-left"
      text=""
      theme="error"
    >
      <textarea
        aria-errormessage="errorMessage21"
        aria-invalid={false}
        style={
          Object {
            "resize": "none",
          }
        }
      />
    </Tooltip>
    <span
      className="accessibility-hidden"
      id="errorMessage21"
      role="alert"
    />
  </Label>
</div>
`;
